--- a/note_app/package.json
+++ b/note_app/package.json
@@ -12,10 +12,10 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-redux": "^7.2.6",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
-    "serve": "^13.0.2",
+    "serve": "^14.1.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
